# United-Nations-Project

./: .gitignore  README.md  pyproject.toml  test_file
data/: building_evaluation_data.csv  item_count_data.csv  item_data.csv  nation_data.csv  player_data.csv
un_project/: manage.py
un_project/cartography_app/: admin.py  apps.py  models.py  urls.py  views.py
un_project/cartography_app/migrations/: 0001_initial.py  0002_alter_cartographymap_options_and_more.py  0003_alter_cartographymap_type.py  0004_alter_cartographymap_type.py  0005_alter_cartographymap_slug_alter_cartographymap_title_and_more.py  0006_alter_cartographymap_slug.py  0007_cartographymap_changes_and_more.py  0008_alter_cartographymap_description.py  0009_alter_cartographymap_type.py
un_project/cartography_app/templates/: cartography_base.html  cartography_home.html  historical_map_detail.html  historical_maps.html  history_maps.html  interactive_un_map.html
un_project/content/templates/: Papo_Quim.html  Ungle_Nelton.html  home.html  storytime.html
un_project/players_api/: apps.py  models.py  serializers.py  urls.py  views.py
un_project/players_api/migrations/: 0001_initial.py
un_project/un_api/: apps.py  urls.py  views.py
un_project/un_app/: __init__.py  admin.py  apps.py  context_processors.py  forms.py  models.py  signals.py  signals_utils.py  urls.py  views.py
un_project/un_project/: models.py  player_routers.py  settings.py  urls.py  wsgi.py
un_project/un_records_app/: admin.py  apps.py  models.py  urls.py  views.py
un_project/website/: apps.py  urls.py  views.py
(+306 files in other folders)
