[tool.poetry]
name = "united-nations-project"
version = "0.1.0"
description = ""
authors = ["Big Ike <bigike@werespecialstudios.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.35"
sqlalchemy-utils = "^0.41.2"
sqlmodel = "^0.0.22"
django = "^5.1.1"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
