[tool.poetry]
name = "united-nations-project"
version = "0.1.0"
description = ""
authors = ["Big Ike <bigike@werespecialstudios.com>"]
readme = "README.md"
 package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.35"
sqlalchemy-utils = "^0.41.2"
sqlmodel = "^0.0.22"
django = "^5.1.2"
psycopg2-binary = "^2.9.10"
djangorestframework = "^3.15.2"
django-cors-headers = "^4.6.0"
feedparser = "^6.0.11"
markdown = "^3.8"
pillow = "^11.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
